# Assignment

Codebase/ios/Include/: LICENSE.md  version.txt
Codebase/ios/Include/ASIHttpRequest/: ASIDownloadCache.h  CMakeLists.txt
Codebase/ios/Include/platform/: AppInfo.h  AppInterface.h  CMakeLists.txt  EegeoRootDeclarations.h  EegeoSDK.h  EegeoUpdateParameters.h  EegeoWindowsGuard.h  EegeoWorld.h  EnvironmentCharacterSet.h  FontMaterialSet.h  IAppOnMap.h  IEegeoErrorHandler.h  ITouchController.h
Codebase/ios/Include/platform/Android/: AndroidCacheFileIO.h  AndroidFileIO.h  AndroidFileIOHelpers.h  AndroidGLContextProxy.h  AndroidGlTaskContextFactory.h  AndroidLocationService.h  AndroidMemoryStats.h  AndroidNativeState.h  AndroidPlatformAbstractionModule.h  AndroidPlatformConfigBuilder.h  AndroidTextRenderer.h  CMakeLists.txt
Codebase/ios/Include/platform/AnimatedObjects/: AnimatedObjectsController.h  AnimatedObjectsRepository.h  CMakeLists.txt
Codebase/ios/Include/platform/Base/: Allocator.h  ArrayBuffer.h  CMakeLists.txt  EegeoBaseNew.h  EffectHandler.h  Graphics.h  List.h  MathFunc.h  Quaternion.h  ShaderOld.h  Spinlock.h  Types.h  VertexFormat.h
Codebase/ios/Include/platform/BuildingFootprints/: BuildingFootprintCoverage.h  BuildingFootprintResource.h  BuildingFootprintResourceCoverage.h  BuildingFootprintResourceCoverageFactory.h  BuildingFootprintResourceStore.h  BuildingFootprintSelectionController.h  BuildingFootprintSelectionModel.h  BuildingFootprintSelectionRenderableFactory.h  BuildingFootprintSelectionView.h  BuildingFootprintSelectionViewFactory.h  BuildingFootprintService.h  BuildingFootprintServiceQuery.h  BuildingFootprintWebLoader.h  BuildingFootprintWebLoaderResult.h  BuildingFootprints.h  BuildingSelectionController.h  CMakeLists.txt  IBuildingFootprintResourceCoverage.h  MortonKeyLRUCache.h
Codebase/ios/Include/platform/Camera/: CMakeLists.txt  CameraHelpers.h  CameraState.h
Codebase/ios/Include/platform/Collision/: CMakeLists.txt  CollisionBvhFactory.h  CollisionBvhIntersectionQueries.h  CollisionBvhNodeIntersectionTests.h  CollisionBvhRayCaster.h  CollisionMaterialIndexLookupPair.h  CollisionMeshRayPicker.h  CollisionSubMeshBuilder.h  ICollisionBvhFactory.h  ICollisionBvhProvider.h  ICollisionMeshResource.h  IRayCaster.h  IRayPicker.h  (+3 more)
Codebase/ios/Include/sdk-extensions/: CMakeLists.txt
Codebase/ios/Include/sdk-extensions/sqlite/: CMakeLists.txt  SQLiteDbConnection.h  SQLiteDbWebLoader.h  SQLiteDbWebLoaderCompletedHandler.h  SQLiteFtsComponent.h  SQLiteFtsQueryTokenizer.h  SQLiteFtsSnippetFormattingConfig.h  SQLiteFtsTokenizerType.h  SQLiteHelpers.h  SQLiteIncludeSqlite3.h  SQLiteLatLongQueryBuilder.h  SQLiteModule.h  SQLiteResultCells.h  SQLiteSpellfixOptions.h  SQLiteSpellfixSuggestion.h  SQLiteTableQuery.h  SQLiteTableQueryHelpers.h  SQLiteTextSearchableTableFactory.h  SQLiteTextSearchableTableQueryBuilder.h  SQLiteTextSearchableTableResults.h
Codebase/ios/Include/sdk-extensions/sqlite/sqlite3/: CMakeLists.txt  eegeoext.h  sqlite3.h
Codebase/ios/ios_src/: ViewController.mm
ios-api-example/ExampleApp/: EegeoMapsContainerViewController.m  eeGeoApiExample-Info.plist  eeGeoApiExample-Prefix.pch
ios-api-example/ExampleApp/en.lproj/: MainStoryboard_iPad.storyboard
ios-api-example/eeGeoApiExample.xcodeproj/: project.pbxproj
ios-api-example/eeGeoApiExample.xcworkspace/: contents.xcworkspacedata
(+771 files in other folders)
